feat: user avatar service, controller and route
